Fix: adding improvements to current implementation